Issue1186-3 Updates to weblog-entry related tables. (#1202)
* Issue1186-3 Updates to weblog-entry related tables.

* Update src/main/java/org/tightblog/service/WeblogEntryManager.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>